Swagger: Add schema : Need authorizations
