# app/static/swagger.json
@@ -11,9 +11,9 @@
                 "description": "Get a single foo with the bar ID.",
                 "parameters": [
                     {
-                        "name": "bar_id",
                         "in": "path",
-                        "description": "Bar ID",
+                        "name": "id",
+                        "description": "ID of the user",
                         "type": "integer",
                         "required": true
                     }
@@ -22,7 +22,7 @@
                     "200": {
                         "description": "Foo object to be returned.",
                         "schema": {
-                            "$ref": "#/definitions/Foo"
+                            "$ref": "#/definitions/User"
                         }
                     },
                     "404": {
@@ -35,19 +35,63 @@
     "tags": [],
     "swagger": "2.0",
     "definitions": {
-        "Foo": {
+        "Links": {
             "type": "object",
             "properties": {
-                "name": {
-                    "type": "string"
+                "followed": {
+                    "type": "string",
+                    "format": "url"
+                },
+                "followers": {
+                    "type": "string",
+                    "format": "url"
+                },
+                "avatar": {
+                    "type": "string",
+                    "format": "url"
+                },
+                "self": {
+                    "type": "string",
+                    "format": "url"
+                }
+            }
+        },
+        "User": {
+            "type": "object",
+            "properties": {
+                "followed_count": {
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "last_seen": {
+                    "type": "string",
+                    "format": "date"
                 },
                 "id": {
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "username": {
+                    "type": "string"
+                },
+                "follower_count": {
+                    "type": "integer",
+                    "format": "int32"
+                },
+                "_links": {
+                    "$ref": "#/definitions/Links"
+                },
+                "about_me": {
+                    "type": "string"
+                },
+                "post_count": {
                     "type": "integer",
                     "format": "int32"
                 }
             },
             "required": [
-                "name"
+                "about_me",
+                "username"
             ]
         }
     },
